# ftl

./: .gitignore  .travis.yaml  README.md  pyproject.toml  requirements.txt
deployment/: django.conf  gunicorn.conf
ftl/: db.sqlite3  manage.py
ftl/activity/: __init__.py  admin.py  models.py  serializers.py  urls.py  views.py
ftl/activity/fixtures/: members.json
ftl/activity/migrations/: 0001_initial.py  0002_auto_20200531_1111.py  0003_auto_20200531_1355.py
ftl/ftl/: asgi.py  settings.py  urls.py  wsgi.py
